// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ImmersiveViewCamera render should not render MapControl 1`] = `
Array [
  <PerspectiveCamera
    makeDefault={false}
    name="ImmersiveCamera"
  />,
  <TripodControls
    dampingFactor={0.2}
    makeDefault={false}
  />,
]
`;

exports[`ImmersiveViewCamera render should not render OrbitControl 1`] = `
Array [
  <PerspectiveCamera
    makeDefault={false}
    name="ImmersiveCamera"
  />,
  <TripodControls
    dampingFactor={0.2}
    makeDefault={false}
  />,
]
`;

exports[`ImmersiveViewCamera render should render ImmersiveViewControl 1`] = `
Array [
  <PerspectiveCamera
    makeDefault={true}
    name="ImmersiveCamera"
  />,
  <TripodControls
    dampingFactor={0.2}
    makeDefault={true}
  />,
]
`;
